Botão e Texto Revisado

--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -17,8 +17,8 @@
 		<span></span><span></span> <span></span><span></span> <span></span>
 	</div>
 	<p>
-		A você não tem acesso a está página, verifique a url ou retorne a<a
-			class="link" onclick="volta()"> página anterior</a>
+		Você não tem acesso a está página, verifique a url ou retorne a página anterior<a
+			class="link" onclick="volta()"> clicando aqui!</a>
 	</p>
 	<script src="../../js/erro/erro404.js">
 		
