--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -19,7 +19,7 @@
 	</div>
 	<p>
 		A página que você está tentando acessar não existe, verifique a url ou
-		retorne a<a class="link" onclick="volta()"> página anterior</a>
+		retorne a página anterior<a class="link" onclick="volta()"> clicando aqui!</a>
 	</p>
 
 	<script src="../../js/erro/erro404.js">
