--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -19,8 +19,7 @@
 	</div>
 	<p>
 		Ocorreu um erro, não foi possível carregar a página, tente novamente
-		mais tarde ou retorne a<a class="link" onclick="volta()"> página
-			anterior</a>
+		mais tarde ou retorne a página anterior<a class="link" onclick="volta()"> clicando aqui!</a>
 	</p>
 	<script src="../../js/erro/erro404.js">
 		
