--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -8,7 +8,7 @@
 <title>Erro 500</title>
 </head>
 <body>
-	<h5>Internal Server error !</h5>
+	<h5>Internal Server error!</h5>
 	<h1>5</h1>
 	<h1>00</h1>
 	<div class="box">
@@ -18,7 +18,7 @@
 		<span></span><span></span> <span></span><span></span> <span></span>
 	</div>
 	<p>
-		Ocorreu um erro, não foi possível carregar a página, tente novamente
+		Ocorreu um erro: não foi possível carregar a página, tente novamente
 		mais tarde ou retorne a página anterior<a class="link" onclick="volta()"> clicando aqui!</a>
 	</p>
 	<script src="../../js/erro/erro404.js">
