Botão e Texto Revisado

--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -18,7 +18,7 @@
 		<span></span><span></span> <span></span><span></span> <span></span>
 	</div>
 	<p>
-		Ocorreu um erro: não foi possível carregar a página, tente novamente
+		Ocorreu um erro: não foi possível carregar a página. Tente novamente
 		mais tarde ou retorne a página anterior<a class="link" onclick="volta()"> clicando aqui!</a>
 	</p>
 	<script src="../../js/erro/erro404.js">
