--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -44,15 +44,13 @@
     <title>Lista de Respostas</title>
 </head>
 <body>
-<h1 style="text-align:center">Lista de Respostas</h1>
-<h4>Avaliações computadas</h4>
-<input th:value="${contagem}" disabled>
-<section class="slc">
-    <h2></h2>
-
+        <h1 style="text-align:center">Lista de Respostas</h1>
+        <section class="slc">
+        <label>Avaliações Respondidas</label>
+        <input th:value="${contagem}" disabled>
     <details th:each="li:${pesq.listaResposta}" id="minhaDiv" open>
 
-        <summary th:text="${li.ip}"></summary>
+        <summary th:text="${li.ip} + '|' + ${li.nomeMaquina} + '|' + ${#dates.format(li.dataRealizacao, 'dd/MM/yyyy hh:mm:ss')}"></summary>
         <div>
             <table class="table">
                 <thead>
@@ -74,13 +72,13 @@
 
             <table class="table table-striped" th:each="it:${li.listaItem}">
                 <thead>
-                <th>Pergunta</th>
+                <th class="thquest">Pergunta</th>
                 
                 <th>Satisfacao</th>
                 <th>Nivel Importancia</th>
-                <th>Comentário</th>
+                <th class="stquest">Comentário</th>
                 <th th:if="${session.diretoriaLogado}">Solicita Justificativa</th>
-                <th></th>
+                
                 <th th:if="${session.docenciaLogado}">Justifica</th>
               
 
@@ -88,7 +86,13 @@
                 </thead>
                 <tbody class="table-group-divider">
                 <td th:text="${it.pergunta.textoPergunta}"></td>
-                <td th:text="${it.satisfacao}"></td>
+                <td th:switch="${it.satisfacao}">
+                        <span th:case="'1'">Pessimo</span>
+                        <span th:case="'2'">Ruim</span>
+                        <span th:case="'3'">Regular</span>
+                        <span th:case="'4'">Bom</span>
+                        <span th:case="'5'">Otimo</span>
+                </td>
                 <td th:text="${it.nivelImportancia}"></td>
                 <td th:text="${it.comentario}"></td>
                 <td><a th:href="@{/itemResposta/solicitaJustificativa(id=${it.id})}" th:if="${session.diretoriaLogado}"
@@ -103,9 +107,6 @@
         </div>
     </details>
 </section>
-</div>
-<div>
-
 </div>
 
 <script th:inline="javascript">
