--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -27,7 +27,15 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 
-<title>Cadastro de Pesquisa</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+		  rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+		  crossorigin="anonymous">
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+	<title>Cadastro de Pesquisa</title>
 
 </head>
 
@@ -47,6 +55,12 @@
 		</ul>
 	</div>
 	<div class="container main-div">
+		<div class="alert alert-success collapse" role="alert" id="myAlert">
+			<button class="btn-close" data-bs-dismiss="alert"></button>
+			<h4 class="alert-heading">Cadastro realizado com sucesso!</h4>
+			<hr>
+			<p class="mb-0">Seu código é: [[${idpesq}]]</p><p> Informe aos seus alunos.</p>
+		</div>
 		<h1 style="text-align:center">Nova Pesquisa</h1>
 
 		<form method="post" action="novaPesquisa">
@@ -110,25 +124,29 @@
 				<label> Data de Vencimento</label> <input type="date"
 					name="dataVencimento" th:attr="min=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required />
 			</div>
-
-			<!--<div>
-          <label>Respostas</label>
-          <select name="listaRespostas">
-            <option th:each="r: ${respostas}" th:text="${r.id}" th:value="${r.id}"></option>
-          </select>
-		    </div>-->
 			<p>
 			<div>
-				<button type="submit" class="btn btn-outline-primary">Cadastrar</button>
+				<button class="btn btn-outline-primary" type="submit">Cadastrar</button>
 			</div>
+
 		</form>
 	</div>
 
-    <script th:inline="javascript">window.addEventListener("load", () => {
-    const id = /*[[${idpesq}]]*/
-    if(id) return alert("Pesquisa criada com sucesso! Seu código é: " + id)
-    })
-    </script>
+<!--    <script th:inline="javascript">window.addEventListener("load", () => {-->
+<!--    const id = /*[[${idpesq}]]*/-->
+<!--    if(id) return alert("Pesquisa criada com sucesso! Seu código é: " + id)-->
+<!--    })-->
+<!--    </script>-->
+
+<script type="text/javascript">
+$(document).ready(function () {
+	var idpesq = [[${idpesq}]];
+	if(idpesq){
+		$('#myAlert').show('fade');
+	}
+});
+</script>
+
 
 	<!-- Script criados -->
 	<script src="../../js/selects/select.js"></script>
