--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -42,9 +42,21 @@
             crossorigin="anonymous"
     />
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <title>Lista de Respostas</title>
 </head>
 <body>
+<div class="alert alert-success collapse" role="alert" id="myAlert">
+    <button class="btn-close" data-bs-dismiss="alert"></button>
+    <h4 class="alert-heading">Justificativa Solicitada com sucesso!</h4>
+    <hr>
+</div>
 <h1 style="text-align:center">Lista de Respostas</h1>
 <h4>Avaliações computadas</h4>
 <input th:value="${contagem}" disabled>
@@ -90,7 +102,7 @@
                 <td><a th:href="@{/itemResposta/justificativa(id=${it.id})}" th:if="${session.docenciaLogado}">Justificar</a>
                 </td>
                 <td><a th:href="@{/itemResposta/solicitaJustificativa(id=${it.id})}" th:if="${session.diretoriaLogado}"
-                       onclick="solicitaJust()" id="cor">Solicitar</a></td>
+                       id="btnSubmit" >Solicitar</a></td>
 
 
                 </tbody>
@@ -103,15 +115,23 @@
 
 </div>
 
-<script th:inline="javascript">
-      //esse metodo troca a cor do background quando uma justificativa eh solicitada, porem acho que o css volta ao normal quando da refresh
+<!--<script th:inline="javascript">-->
+<!--      //esse metodo troca a cor do background quando uma justificativa eh solicitada, porem acho que o css volta ao normal quando da refresh-->
 
-      function solicitaJust() {
-        const input = document.getElementById("cor");
-        input.style.background = "black";
-        alert("Justificativa solicitada com sucesso!!");
-}
+<!--      function solicitaJust() {-->
+<!--        const input = document.getElementById("cor");-->
+<!--        input.style.background = "black";-->
+<!--        alert("Justificativa solicitada com sucesso!!");-->
+<!--}-->
 
+<!--</script>-->
+
+<script type="text/javascript">
+$(document).ready(function () {
+    $('#btnSubmit').click(function () {
+    	$('#myAlert').show('fade');
+    });
+});
 </script>
 
 
@@ -124,5 +144,12 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"
 ></script>
+
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous">
+
+</script>
 </body>
 </html>
