--- a/src/main/resources/static/css/listas/lista.css
+++ b/src/main/resources/static/css/listas/lista.css
@@ -1,117 +1,157 @@
 #customers {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  #customers td,
-  #customers th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  #customers tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  #customers tr:hover {
-    background-color: #ddd;
-  }
-  
-  #customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-  
-    color: black;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#customers td,
+#customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+  background-color: #ddd;
+}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+
+  color: black;
+}
 .navbar{
-  background-color: #360568;
-  /* background: rgb(2,62,138);
+background: rgb(149,29,179);
+background: linear-gradient(90deg, rgba(149,29,179,1) 0%, rgba(123,22,195,1) 36%, rgba(56,56,187,1) 65%, rgba(8,1,125,1) 93%);
+/* background-color: #360568; */
+/* background: rgb(2,62,138);
 background: linear-gradient(90deg, rgba(2,62,138,1) 8%, rgba(0,119,182,1) 24%, rgba(0,150,199,1) 40%, rgba(0,150,199,1) 54%, rgba(0,119,182,1) 72%, rgba(2,62,138,1) 89%); */
 
 }
 .navbar-toggler {
-  color: #fff !important;
-  
+color: #fff !important;
+
 
 }
-  .material-icons{
-  color: #360568;
+.material-icons{
+color: #360568;
 
-  }
+}
 
 
 .container-fluid{
 
 }
 .navbar-brand {
-  width: 60% !important;
-  
+width: 17% !important;
+
 }
 
-  .id {
-      width:5%;
-  }
-  .th-height {
-    width: 20%;
-  }
-  .table{
-    margin:4% ;
-    width:92% !important;
-  }
-  .pagination{
-    margin-left: auto;
-    margin-right: auto; 
-  }
-  .Logo_kaos{
-    max-width: 200px !important;
-  }
+.id {
+    width:5%;
+}
+.th-height {
+  width: 30%;
+}
 
-  .kaos{
-    max-width:35px !important;
-  }
+.table{
+  margin:70px ;
+  padding-bottom: 80px;
+  width:92% !important;
+ 
+}
 
-  .card{
-    border:--bs-card-border-color: var(--bs-border-color-translucent) !important;
-  }
-  .card-body {
-    background-color: #360568 !important;
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    text-align: center;
-    height: 75px; 
-  }
-  .card-text{
-    color: white !important;
-  }
 
-  .content {
-    position:relative;
-    height:20vh;
-    text-align:center;
-    background-color: white;    
-  }
-
-  .flex { /*Flexbox for containers*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  p {
-    letter-spacing: 1px;
-    font-size:14px;
-    color: #333333;
+.pagination{
+  margin-left: 45.5%;
+  margin-right: 70%; 
+  padding: 35px;
   
-  }
-  .material-symbols-outlined {
-    color: #360568;
-  }
   
-  .page-link {
-    color: black !important;
+}
+.Logo_kaos{
+  max-width: 200px !important;
+}
+
+.kaos{
+  max-width:35px !important;
+  padding-top: 10px;
+}
+
+.card{
+  border:--bs-card-border-color var(--bs-border-color-translucent) !important;
+}
+
+.card-body {
+  background: rgb(149,29,179);
+background: linear-gradient(90deg, rgba(149,29,179,1) 0%, rgba(123,22,195,1) 36%, rgba(56,56,187,1) 65%, rgba(8,1,125,1) 93%)!important;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  height: 80px; 
+}
+.card-text{
+  color: white !important;
+}
+
+.content {
+  position:relative;
+  height:20vh;
+  text-align:center;
+  background-color: white;    
+}
+
+.flex { /*Flexbox for containers*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+p {
+  letter-spacing: 1px;
+  font-size:14px;
+  color: #333333;
+
+}
+.material-symbols-outlined {
+  color: #360568;
+}
+
+.page-link {
+  color: black !important;
+}
 
 
-  }
+.resultado{
+
+display: flex;
+  position: absolute;
+  top: 10%;
+  left: 80%;
+      font-family: 'Playfair Display', serif;
+  
+}
+.resultado-item{
+  margin-left:60px;
+}
+
+.item-ok{
+  border-left: 30px solid blue;
+  
+}
+.item-pendente{
+  border-left: 30px solid orange;
+}
+
+.item-ativo{
+  border-left: 30px solid green;
+}
+.item-inativo{
+  border-left: 30px solid red;
+}
