--- a/src/main/resources/templates/telainicial/telaInicialSecretaria.html
+++ b/src/main/resources/templates/telainicial/telaInicialSecretaria.html
@@ -18,21 +18,19 @@
 			
 			<a href="/curso" style="margin: 0 40px 0 60px">Cadastrar Curso</a>
 			
-			<a href="/buscarCurso" style="margin: 0 40px 0 60px">Buscar por Curso</a>
-			
 			<a href="/listaCurso/1" style="margin: 0 40px 0 60px">Listar Curso</a>
 			
 			<a href="/pergunta/cadastrar" style="margin: 0 40px 0 60px">Cadastrar Nova Pergunta</a>
 			
-			<a href="/pergunta/listar" style="margin: 0 40px 0 60px">Listar Perguntas</a>
+			<a href="/pergunta/listar/1" style="margin: 0 40px 0 60px">Listar Perguntas</a>
 
 			<a href="/pesquisa/cadastrar" style="margin: 0 40px 0 60px">Cadastrar Pesquisa</a>
 			
-			<a href="/pesquisa/listar" style="margin: 0 40px 0 60px">Listar Pesquisa</a>
+			<a href="/pesquisa/listar/1" style="margin: 0 40px 0 60px">Listar Pesquisa</a>
 
-			<a href="/resposta/codigoPesquisa" style="margin: 0 40px 0 60px">Formulario</a>		
+			<a href="/resposta/codigoPesquisa" style="margin: 0 40px 0 60px">Formulário</a>		
 			
-			<a href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9" style="margin: 0 40px 0 60px" >Gerar Relatório</a>	
+			<a href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9" style="margin: 0 40px 0 60px" >Média</a>	
 		</div>
 </body>
 </html>
