--- a/src/main/resources/templates/curso/listaCurso.html
+++ b/src/main/resources/templates/curso/listaCurso.html
@@ -1,65 +1,98 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="../../css/listas/lista.css" /> 
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png"> 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-<!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<title>Lista de Cursos</title>
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		    <!-- Favicon -->
+			<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+		<link rel="stylesheet" href="../../css/listas/lista.css" />  
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<!-- CSS only -->
+		
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<title>Lista de Curso</title>
+	  </head>
 <body>
-
-
-	<nav class="navbar navbar-dark bg-dark fixed-top">
+	<nav class="navbar navbar-dark  fixed-top">
 		<div class="container-fluid">
-		  <a class="navbar-brand" href="#">Lista de Pesquisa</a>
+			
+			<div>
+				<img class="Logo_kaos "src="../../img/Logo_KAOS.png" alt="">
+			  </div>
+			  
+		  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Curso</p>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
 			<span class="navbar-toggler-icon"></span>Menu
 		  </button>
+
 		  <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
 			<div class="offcanvas-header">
-			  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Pesquise</h5>
+			  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
 			  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 			</div>
-	
-			  <form  class="d-flex form-pesquisa" role="search">
-				<input  class="form-control me-2" type="search" name="id"  aria-label="Search" id="input-busca">
-				<button class="btn btn-outline-success" type="submit">Pesquisar</button>
-			</form>
+			<div class="offcanvas-body">
+			  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+
+				<li class="nav-item">
+				  <a class="nav-link" href="/cadastro">Cadastrar Usuário</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/lista/1">Listar Usuário</a>
+				  </li>
+				<li class="nav-item">
+				  <a class="nav-link" href="/curso">Cadastrar Curso</a>
+				</li>
+				
+				<li class="nav-item">
+				  <a class="nav-link" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="/pergunta/listar/1">Listar Pergunta</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="/pesquisa/cadastrar">Cadastrar Pesquisa</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="/pesquisa/listar/1">Listar Pesquisa</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="/resposta/codigoPesquisa">Formulário</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9">Média</a>
+				</li>
+			  </ul>
 			</div>
 		  </div>
 		</div>
 	  </nav>
-		
 <h1>Lista de Curso</h1>
-<table id="customers">
+<table class="table">
 <thead>
   <tr>
-	<th class="aumentar">ID</th>
-	<th class="aumentar">Nome</th>
-	<th class="aumentar">Tipo de Curso</th>
-	<th>Alterar</th>
-	<th>Excluir</th>
+	<th class="id">ID</th>
+	<th class="th-height">Nome</th>
+	<th class="th-height">Tipo de Curso</th>
+	<th class="th-height">Alterar</th>
+	<th class="th-height">Excluir</th>
   </tr>
 </thead>
-<tbody>
-  <tr th:each="c:${cursoC}">
+<tbody id="tb-user" class="table-group-divider" >
+  <tr th:each="c:${cursoC}" scope="row">
 	<td th:text="${c.id}" />
 	 <td th:text="${c.descCurso}" />
 	 <td th:text="${c?.tipo}"/>
-	 <td><a th:href="@{/alteraCurso(id=${c.id})}">
-	  <span class="material-symbols-outlined">
-		settings
-		</span> </a></td>
-	 <td><a th:href="@{/exclueCurso(id=${c.id})}"><span class="material-symbols-outlined">
-	  delete
-	  </span></a></td>
+	
+	  <td><a th:href="@{/alteraCurso(id=${c.id})}"><i
+		class="material-icons">create</i> </a></td>
+
+	<td><a th:href="@{/exclueCurso(id=${c.id})}"> <i
+		class="material-icons">delete_forever</i></a></td> 	
  </tr>
  
 </tbody>
@@ -73,6 +106,8 @@
 			<li class="page-item" th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a class="page-link" th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
 		</ul>
 	</nav>
+
+	<footer th:replace="fragments/padrao :: rodape"></footer>
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
