--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -1,82 +1,106 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- Favicon -->
-<link rel="apple-touch-icon" sizes="180x180"
-	href="../img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32"
-	href="../img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16"
-	href="../img/favicon-16x16.png">
-<link rel="stylesheet" href="../../css/listas/lista.css" />
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-<!-- CSS only -->
-
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-	crossorigin="anonymous">
-<title>Lista de Usuario</title>
-</head>
-<body>
-
-
-	<nav class="navbar navbar-dark  fixed-top">
-		<div class="container-fluid">
-
-			<div>
-				<img class="Logo_kaos " src="../img/Logo_KAOS.png" alt="">
-			</div>
-
-			<p class="navbar-brand" style="color: white; font-size: xx-large;">Lista
-				de Usuário</p>
-			<button class="navbar-toggler" type="button"
-				data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-				aria-controls="offcanvasDarkNavbar">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		    <!-- Favicon -->
+			<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+		<link rel="stylesheet" href="../../css/listas/lista.css" />  
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<!-- CSS only -->
+		
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<title>Lista de Usuário</title>
+	  </head>
+	  <body>
+	
+		<nav class="navbar navbar-dark  fixed-top">
+			<div class="container-fluid">
+				
+				<div>
+					<img class="Logo_kaos "src="../../img/Logo_KAOS.png" alt="">
+				  </div>
+				  
+			  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Usuário</p>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
 				<span class="navbar-toggler-icon"></span>Menu
-			</button>
-			<div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1"
-				id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+			  </button>
 
-				<form class="d-flex form-pesquisa" role="search">
-					<input class="form-control me-2" type="search" name="id"
-						aria-label="Search" id="input-busca">
-					<button class="btn btn-outline-success" type="submit">Pesquisar</button>
-				</form>
+			  <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+				<div class="offcanvas-header">
+				  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+				  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+				</div>
+				<div class="offcanvas-body">
+				  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="../telaInicialSecretaria">Home</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/cadastro">Cadastrar Usuário</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/curso">Cadastrar Curso</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/listaCurso/1">Listar Curso</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/pergunta/cadastrar">Cadastrar Nova Pergunta</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/pergunta/listar/1">Listar Pergunta</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/pesquisa/cadastrar">Cadastrar Pesquisa</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/pesquisa/listar/1">Listar Pesquisa</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="/resposta/codigoPesquisa">Formulário</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9">Média</a>
+					</li>
+				  </ul>
+				</div>
+			  </div>
 			</div>
-		</div>
-		</div>
-	</nav>
-
-
-	<h1>Lista de Usuários</h1>
-
-
-
-	<table class="table">
-
+		  </nav>
+		  	  			<div class="resultado">
+			  
+				  	<div class="resultado-item">
+				  		<p class="item-ativo"> = Ativo</p>	
+				  	</div>
+				  	
+				  	<div class="resultado-item">
+				  		<p class="item-inativo"> = Inativo</p>	
+				  	</div>	  	
+	
+			  </div>
+		<h1>Lista</h1>
+		<table class="table">
+			
 		<thead>
-			<tr>
-				<th class="id">ID</th>
-				<th class="th-height">Nome</th>
-				<th class="th-height">NIF</th>
-				<th class="th-height">Tipo</th>
-				<th class="th-height">Alterar</th>
-				<th class="th-height">Resetar Senha</th>
-				<th class="th-height">Desativar Usuario</th>
-				<th class="th-height"></th>
-			</tr>
+		  <tr>
+			<th class="id">ID</th>
+			<th class="th-height">Nome</th>
+			<th class="th-height">NIF</th>
+			<th class="th-height">Tipo</th>
+			<th class="th-height">Alterar</th>
+			<th class="th-height">Resetar Senha</th>
+			<th class="th-height">Desativar Usuário</th>
+			<th class="th-height"></th>
+		  </tr>
 		</thead>
-		<tbody id="tb-user" class="table-group-divider">
+		<tbody id="tb-user" class="table-group-divider" >
 			<tr th:each="user:${usuario}" scope="row">
 
 				<td th:text="${user.userId}" />
@@ -88,9 +112,9 @@
 						class="material-icons">create</i> </a></td>
 
 				<td><a th:href="@{/reseta(userId=${user.userId})}"> <i
-						class="material-icons" onclick=" reset()">autorenew</i></a></td>
-
-				<td><button th:disabled="${!user.isAtivo}" onclick="desativa()">
+      					class="material-icons">autorenew</i></a></td> 		
+						
+			<td><button th:disabled="${!user.isAtivo}" onclick="desativa()">
 						<a th:href="@{/desativar(userId=${user.userId})}"> <i
 							class="material-icons">delete_forever</i></a>
 					</button></td>
@@ -101,48 +125,24 @@
 			</tr>
 
 		</tbody>
-	</table>
+		
+		</table>
+	
+		<nav class="pagination">
+			<ul class="pagination">
+			  <li class="page-item" th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect' }"><a class="page-link" th:href="${pagAtual > 1 ? pagAtual - 1 : '#' }">Anterior</a></li>
+			  <li class="page-item" th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}" th:each="p:${numPag}"><a class="page-link" th:href="${p}"><span th:text="${p}"></span></a></li>
+			  
+			  <li class="page-item" th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a class="page-link" th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
+			</ul>
+		  </nav>
+		
+		
 
-	<nav class="pagination">
-		<ul class="pagination">
-			<li class="page-item"
-				th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect' }"><a
-				class="page-link" th:href="${pagAtual > 1 ? pagAtual - 1 : '#' }">Anterior</a></li>
-			<li class="page-item"
-				th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}"
-				th:each="p:${numPag}"><a class="page-link" th:href="${p}"><span
-					th:text="${p}"></span></a></li>
+		  <footer th:replace="fragments/padrao :: rodape"></footer>
+	
+		<!-- JavaScript Bundle with Popper -->
 
-			<li class="page-item"
-				th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a
-				class="page-link"
-				th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
-		</ul>
-	</nav>
-
-	<div class="card text-center">
-
-		<div class="card-body ">
-			<img class="kaos " src="../img/android-chrome-512x512.png" alt="">
-			<p class="card-text">By KAOS</p>
-		</div>
-
-	</div>
-
-	<!-- JavaScript Bundle with Popper -->
-	<script>
-		function reset() {
-			alert("Senha de Usuario resetada");
-		}
-
-		function desativa() {
-			alert("Usuario deastivado");
-		}
-	</script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-		crossorigin="anonymous"></script>
-
-</body>
-</html>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+	  </body>
+	</html>
