--- a/src/main/resources/templates/curso/curso.html
+++ b/src/main/resources/templates/curso/curso.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-    <link
-      rel="stylesheet"
-      href="../../css/cadastro-cursos/cad-curso.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
-    />
-    
-    <title>Cadastro de Curso</title>
+	  <meta charset="UTF-8" />
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	  <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
+
+	  <!-- CSS only -->
+
+	  <link
+			  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+			  rel="stylesheet"
+			  integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+			  crossorigin="anonymous" />
+	  <link
+			  href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+			  rel="stylesheet" />
+	  <!-- JQuery -->
+	  <script
+			  src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+	  <link
+			  href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+			  rel="stylesheet" />
+
+	  <script
+			  src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+
+	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous">
+
+	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+	  <title>Cadastro de Curso</title>
   </head>
   <body>
     
@@ -38,6 +54,12 @@
     </div>
 	<div class="container main-div">
 		<form action="salvarCurso" method="post">
+
+			<div class="alert alert-success collapse" role="alert" id="myAlert">
+				<button class="btn-close" data-bs-dismiss="alert"></button>
+				<h4 class="alert-heading">Justificativa registrada com sucesso!</h4>
+			</div>
+
 		  <input type="hidden" name="id" th:value="${cs?.id}" />
 		  <div class="mb-3">
 			<h4>Cadastro de Cursos</h4>
@@ -77,5 +99,20 @@
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
+	<script type="text/javascript">
+$(document).ready(function () {
+	var idCurso = [[${idCurso}]];
+	if(idCurso){
+		$('#myAlert').show('fade');
+	}
+});
+</script>
+
+	<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+			crossorigin="anonymous">
+
+	</script>
   </body>
 </html>
