--- a/src/main/resources/templates/justificativa/justificativaResposta.html
+++ b/src/main/resources/templates/justificativa/justificativaResposta.html
@@ -44,7 +44,7 @@
 
     <div class="alert alert-success collapse" role="alert" id="myAlert">
         <button class="btn-close" data-bs-dismiss="alert"></button>
-        <h4 class="alert-heading">Justificativa realizada com sucesso!</h4>
+        <h4 class="alert-heading">Justificativa registrada com sucesso!</h4>
     </div>
 
     <input type="hidden" name="id"/>
