--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -57,9 +57,9 @@
 	<div class="container main-div">
 		<div class="alert alert-success collapse" role="alert" id="myAlert">
 			<button class="btn-close" data-bs-dismiss="alert"></button>
-			<h4 class="alert-heading">Cadastro realizado com sucesso!</h4>
+			<h4 class="alert-heading">Pesquisa cadastrada com sucesso!</h4>
 			<hr>
-			<p class="mb-0">Seu código é: [[${idpesq}]]</p><p> Informe aos seus alunos.</p>
+			<p class="mb-0">O código é: [[${idpesq}]].</p><p> Informe ao docente.</p>
 		</div>
 		<h1 style="text-align:center">Nova Pesquisa</h1>
 
