--- a/src/main/resources/static/css/cadastro-cursos/cad-curso.css
+++ b/src/main/resources/static/css/cadastro-cursos/cad-curso.css
@@ -52,7 +52,7 @@ body{
 
 
 .area{
-    background: #002855;  
+    background: #0c0133;  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
     height:100vh;
