--- a/src/main/resources/static/css/sections.css
+++ b/src/main/resources/static/css/sections.css
@@ -17,6 +17,7 @@ body {
 section {
   max-width: var(--sectionWidth);
   margin: 40px auto;
+  margin-bottom: 5%;
   width: 97%;
 }
 
@@ -82,6 +83,7 @@ details[open] > summary {
     animation-duration: 0.3s;
     animation-fill-mode: forwards;
     border-left: 1px solid red;
+    border-bottom: 1px solid red;
   }
 
 
