--- a/src/main/resources/templates/curso/curso.html
+++ b/src/main/resources/templates/curso/curso.html
@@ -17,6 +17,10 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+/>
     
     <title>Cadastro de Curso</title>
   </head>
@@ -37,6 +41,9 @@
       </ul>
     </div>
 	<div class="container main-div">
+    <span class="material-symbols-outlined" >
+			<button class="link-home" onclick='history.go(-1)'> home</button>
+  </span>
 		<form action="salvarCurso" method="post">
 		  <input type="hidden" name="id" th:value="${cs?.id}" />
 		  <div class="mb-3">
@@ -68,7 +75,7 @@
 			</select>
 		  </div>
   
-		  <button type="submit" class="btn btn-primary">Salvar</button>
+		  <button type="submit" class="btn btn-primary ">Salvar</button>
 		</form>
 	  </div>
     <!-- JavaScript Bundle with Popper -->
