--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -23,7 +23,7 @@
 			<div class="container-fluid">
 				
 				<div>
-					<img class="Logo_kaos "src="../../img/Logo_KAOS.png" alt="">
+					<img class="Logo_kaos "src="../../img/logo-claro.png" alt="">
 				  </div>
 				  
 			  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Usuário</p>
