--- a/src/main/resources/static/css/pesquisa/pesquisa.css
+++ b/src/main/resources/static/css/pesquisa/pesquisa.css
@@ -23,7 +23,69 @@
   text-align: center;
 }
 .container{
-  width: 400px!important;
+  width: 600px!important;
+  --bs-gutter-x: 15rem !important;
+}
+
+.material-symbols-outlined {
+    left: 85% !important;
+    font-size: 35px !important;
+    position: absolute;
+    color: #fff ;
+}
+
+.link-home{
+    text-decoration: none !important;
+    color: #fff ;
+    border-radius: 7px;  
+    box-shadow: inset 100px 0 0 0 #0c0133;
+    border: transparent;
+}
+
+button:hover {
+    box-shadow: inset 100px 0 0 0 #fff;
+    color: #0c0133;
+    color: var(--bs-indigo) !important;
+    border: transparent;
+  }
+  .btn-primary{
+    color: #fff ;
+    box-shadow: inset 100px 0 0 0 #0c0133;
+    -bs-btn-border-color: #0c0133 !important; 
+    --bs-btn-border-width: 0px !important;
+    background-color: #0c0133 !important;
+    
+}
+
+.btn-primary:hover {
+    box-shadow: inset 100px 0 0 0 #fff;
+    color:var(--bs-indigo) !important;
+    color: var(--bs-indigo) !important;
+    background-color: #fff !important;
+    border: 1px solid var(--bs-indigo) !important;;  
+
+  }
+
+
+  .btn-outline-primary{
+    color: #fff !important;
+    box-shadow: inset 100px 0 0 0 #0c0133;
+    -bs-btn-border-color: #0c0133 !important; 
+    --bs-btn-border-width: 0px !important;
+    background-color: #0c0133 !important;
+    
+}
+
+.btn-outline-primary:hover {
+    box-shadow: inset 100px 0 0 0 #fff;
+    color:var(--bs-indigo) !important;
+    color: var(--bs-indigo) !important;
+    background-color: #fff !important;
+    border: 1px solid var(--bs-indigo) !important;  
+
+  }
+  .element.style {
+    text-align: left !important;
 }
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
