--- a/src/main/resources/templates/pergunta/listaPergunta.html
+++ b/src/main/resources/templates/pergunta/listaPergunta.html
@@ -22,7 +22,7 @@
 		<div class="container-fluid">
 			
 			<div>
-				<img class="Logo_kaos "src="../../img/Logo_KAOS.png" alt="">
+				<img class="Logo_kaos "src="../../img/logo-claro.png" alt="">
 			  </div>
 			  
 		  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Pergunta</p>
