--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -23,6 +23,10 @@
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
 	rel="stylesheet" />
+	<link
+	rel="stylesheet"
+	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+/>
 
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
@@ -48,6 +52,9 @@
 	</div>
 	<div class="container main-div">
 		<h1 style="text-align:center">Nova Pesquisa</h1>
+		<span class="material-symbols-outlined" >
+			<button class="link-home" onclick='history.go(-1)'> home</button>
+		</span>
 
 		<form method="post" action="novaPesquisa">
 			<input type="hidden" name="id" id="idpesq" />
